--- a/src/output.css
+++ b/src/output.css
@@ -554,6 +554,16 @@ video {
   display: none;
 }
 
+.bg-backgroundGreen {
+  --tw-bg-opacity: 1;
+  background-color: rgba(12, 166, 128, var(--tw-bg-opacity, 1));
+}
+
+.bg-backgroundWhite {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity, 1));
+}
+
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
